src/style.scss
:root {
  font-family: 'Blinker', sans-serif;

  color-scheme: dark;
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

li{
  list-style-type: none;
}

.active{
  border-bottom: 2px solid #f0533f;

  color: #f0533f;

  transform: scale(1.3);

  margin-bottom: 14px;
}

